# cnx

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  shell.nix
.github/workflows/: ci.yml
cnx/: Cargo.toml
cnx-bin/: Cargo.toml
cnx-bin/src/: main.rs
cnx-contrib/: Cargo.toml
cnx-contrib/src/: lib.rs
cnx-contrib/src/widgets/: battery.rs  command.rs  cpu.rs  disk_usage.rs  leftwm.rs  mod.rs  sensors.rs  volume.rs  weather.rs  wireless.rs
cnx-contrib/src/widgets/battery/: battery_bsd.rs  battery_linux.rs
cnx-contrib/src/widgets/sensors/: sensors_bsd.rs  sensors_linux.rs
cnx-contrib/src/widgets/volume/: volume_linux.rs
cnx/src/: bar.rs  lib.rs  text.rs  xcb.rs
cnx/src/widgets/: clock.rs  cpu.rs  mod.rs  pager.rs  sensors_linux.rs
src/: bar.rs  cmd.rs  errors.rs  lib.rs  main.rs  text.rs  window.rs  xcb.rs
src/widgets/: active_window_title.rs  battery.rs  battery_bsd.rs  battery_linux.rs  clock.rs  cpu.rs  disk_usage.rs  mod.rs  pager.rs  sensors.rs  sensors_bsd.rs  sensors_linux.rs  volume.rs  volume_linux.rs  volume_rust.org  volume_rust.rs  weather.rs  wireless.rs
src/widgets/volume/: volume_linux.rs
