[package]
name = "cnx"
version = "0.2.0"
edition = "2018"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
description = "A simple X11 status bar"
repository = "https://github.com/mjkillough/cnx"
readme = "README.md"
keywords = ["x11", "status", "bar"]
categories = ["gui"]
license = "MIT"

[badges]
travis-ci = { repository = "mjkillough/cnx", branch = "master" }

[[bin]]
name = "cnx"
doc = false

[features]
default = ["volume-widget"]
volume-widget = ["alsa"]

[dependencies]
alsa = { version = "0.2", optional = true }
cairo-rs = { version = "0.5", features = ["xcb"] }
cairo-sys-rs = "0.7"
chrono = "0.4"
env_logger = "0.6"
failure = "0.1"
futures = "0.1"
itertools = "0.8"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
mio = "0.6"
pango = "0.5"
pangocairo = "0.6"
regex = "1.1"
tokio-core = "0.1"
tokio-timer = "0.1"
xcb = "0.8"
xcb-util = { version = "0.2", features = ["ewmh"] }
