[package]
name = "cnx"
version = "0.3.0"
edition = "2018"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
description = "A simple X11 status bar"
repository = "https://github.com/mjkillough/cnx"
readme = "README.md"
keywords = ["x11", "status", "bar"]
categories = ["gui"]
license = "MIT"

[badges]
travis-ci = { repository = "mjkillough/cnx", branch = "master" }

[[bin]]
name = "cnx"
doc = false

# [features]
# default = []
# volume-widget = ["alsa"]

[dependencies]
anyhow = "1.0"
async-stream = "0.2"
cairo-rs = { version = "0.8", features = ["xcb"] }
cairo-sys-rs = "0.9"
chrono = "0.4"
futures = "0.3"
lazy_static = "1.4"
mio = "0.6"
ordered-float = "1.0"
pango = "0.8"
pangocairo = "0.9"
regex = "1.3"
sioctl = "0.0.1"
tokio = { version = "0.2", features = ["rt-core", "rt-util", "io-driver", "stream", "time", "macros", "sync"] }
xcb = "0.9"
xcb-util = { version = "0.3", features = ["ewmh"] }

