[package]
name = "cnx-contrib"
version = "0.1.0"
authors = ["Sibi Prabakaran <sibi@psibi.in>", "Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["volume"]
volume = ["alsa", "sioctl"]
wireless = ["iwlib"]

[dependencies]
cnx = { path = "../cnx" }
anyhow = "1.0.41"
weathernoaa = "0.2.0"
tokio = { version = "1.2.0", features = ["rt", "net", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.5" }
async-stream = "0.2"
iwlib = { version = "0.1", optional = true}
alsa = { version = "0.5.0", optional = true}
regex = "1.5"
nix = "0.20.0"
byte-unit = "4.0.12"
reqwest = { version = "0.11" }
[target.'cfg(openbsd)'.dependencies]
sioctl = { version = "0.0.1", optional = true}
openssl = { version = "0.10", features = ["vendored"] }
