[package]
name = "cnx-contrib"
version = "0.1.0"
authors = ["Sibi Prabakaran <sibi@psibi.in>", "Michael Killough <michaeljkillough@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["volume"]
volume = ["alsa", "sioctl"]
wireless = ["iwlib"]
leftwm = ["process-stream", "serde", "serde_derive", "serde_json"]

[dependencies]
cnx = { path = "../cnx" }
anyhow = "1.0.41"
weathernoaa = "0.2.0"
tokio = { version = "1.18.0", features = ["rt", "net", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8" }
async-stream = "0.3.3"
iwlib = { version = "0.1", optional = true}
alsa = { version = "0.5.0", optional = true}
regex = "1.5"
nix = "0.20.0"
byte-unit = "4.0.12"
reqwest = { version = "0.11" }
process-stream = { version = "0.4.1", optional = true}
serde = { version = "1.0.152", optional = true}
serde_derive = { version = "1.0.152", optional = true}
serde_json = { version = "1.0.91", optional = true}
[target.'cfg(openbsd)'.dependencies]
sioctl = { version = "0.0.1", optional = true}
openssl = { version = "0.10", features = ["vendored"] }
